--- a/assets/js/browser/tsconfig.json
+++ b/assets/js/browser/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.common.json",
     "include": [
         "*",
+        "../@types/alpinejs/index.d.ts",
     ],
     "compilerOptions": {
         "lib": [
