--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "alpinejs": "^2.8.0",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -20,6 +21,7 @@
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/glob": "^7.1.3",
     "@types/mini-css-extract-plugin": "^1.2.2",
+    "@types/nprogress": "^0.2.0",
     "@types/phoenix": "^1.5.1",
     "@types/phoenix_live_view": "^0.14.0",
     "babel-loader": "^8.0.0",
