upgrade to node v15

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,6 @@ FROM elixir:${VARIANT}
 RUN apt-get update && \
     apt-get install -y postgresql-client && \
     apt-get install -y inotify-tools && \
-    apt-get install -y nodejs && \
     apt-get install -y ripgrep && \
     apt-get install -y git && \
     apt-get install -y man && \
@@ -12,6 +11,8 @@ RUN apt-get update && \
     apt-get install -y vim && \
     apt-get install -y python3 && \
     apt-get install -y python3-pip && \
+    curl -sL https://deb.nodesource.com/setup_15.x | bash && \
+    apt-get install -y nodejs && \
     curl -L https://npmjs.org/install.sh | sh && \
     curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list &&\
