--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "deploy": "NODE_ENV=production webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors js/test/**/*.ts",
+    "coverage": "nyc yarn test"
   },
   "dependencies": {
     "alpinejs": "^2.8.0",
@@ -16,21 +18,30 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.12.11",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/chai": "^4.2.14",
     "@types/copy-webpack-plugin": "^6.3.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/glob": "^7.1.3",
     "@types/mini-css-extract-plugin": "^1.2.2",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.22",
     "@types/nprogress": "^0.2.0",
     "@types/phoenix": "^1.5.1",
     "@types/phoenix_live_view": "^0.14.0",
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.0.0",
+    "chai": "^4.2.0",
     "copy-webpack-plugin": "^7.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
+    "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "mocha": "^8.2.1",
     "node-sass": "^5.0.0",
+    "nyc": "^15.1.0",
     "postcss": "^8.2.4",
     "postcss-loader": "^4.2.0",
     "sass-loader": "^10.1.0",
