initial firebase config values

--- a/assets/js/browser/tsconfig.json
+++ b/assets/js/browser/tsconfig.json
@@ -3,6 +3,7 @@
     "include": [
         "*",
         "../@types/alpinejs/index.d.ts",
+        "../firebase-config.ts",
     ],
     "compilerOptions": {
         "lib": [
