--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "alpinejs": "^2.8.0",
+    "firebase": "^8.2.5",
     "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
