--- a/assets/package.json
+++ b/assets/package.json
@@ -25,6 +25,7 @@
     "@types/copy-webpack-plugin": "^6.3.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/glob": "^7.1.3",
+    "@types/jsdom": "^16.2.6",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
