buttons do shit

--- a/assets/js/browser/tsconfig.json
+++ b/assets/js/browser/tsconfig.json
@@ -6,6 +6,7 @@
         "../firebase-config.ts",
     ],
     "compilerOptions": {
+        "target": "es5",
         "lib": [
             "dom"
         ]
